# odda_diann

./: .gitignore  README.md  pyproject.toml  requirements.txt  start_diann_instances.sh
src/odda_diann/: __init__.py  run_diann.py
static/apptainer/: README.md  build_images.sh  diann.def  diann_sha256.txt
