[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "odda_diann"
version = "0.1.0"
description = "Apptainer containers made accessible via MCP server."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Alexandre Hutton", email = "alexandre.hutton@proton.me"},
]


[tool.setuptools.packages.find]
where = ["src"]
